# advent-of-code-python-starter

./: .gitignore  README.md  pyproject.toml
aoc/day01/: __main__.py  part1.py
tests/: conftest.py  test_day01.py
